# calendergenerator

./: CMakeLists.txt  datehelper.cpp  htmlgenerator.cpp  main.cpp
include/calendergenerator/: datehelper.h  htmlgenerator.h  types.h
test/: CMakeLists.txt  datehelper_test.cpp
